# PyKS2

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyks2.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: METHODOLOGY.md  PROTOCOL.md  _config.yml  index.md
examples/: API_REFERENCE.json  README.md  apis.json  camera-shoot-finish-bulb.json  camera-shoot-response.json  camera-shoot-start-bulb.json  changes-events.jsonl  constants-camera.json  constants-device.json  constants-lens.json  constants.json  dial-positions.json  error-400-bad-request.json  error-412-precondition.json  lens-focus-response.json  lens-identity-none.json  params-camera.json  params-device.json  params-lens.json  params.json  photos-latest-info.json  photos-listing.json  ping.json  props-camera.json  props-device.json  props.json  status-camera.json  status-device-cardfull.json  status-device.json  status-lens.json  status.json  variables-camera.json  variables-device.json  variables-lens.json  variables-liveview.json  variables.json
pyks2/: __init__.py  _mjpeg.py  async_client.py  cli.py  client.py  constants.py  errors.py  events.py  models.py
tests/: conftest.py  test_async.py  test_client.py  test_fixes.py  test_liveview.py  test_models.py  test_typed_settings.py
